--- a/src/app/main/components/about-us/about-us.component.html
+++ b/src/app/main/components/about-us/about-us.component.html
@@ -3,20 +3,20 @@
     <p class="subtitle">Каждый может найти свою команду</p>
 
     <div class="box__cell">
-        <div class="cell">
+        <a class="cell" target="_blank" href="https://instagram.com/mr.marshanskiy">
             <div class="avatar__mr"></div>
             <div>
                 <p class="text">Николай Маршанский</p>
-                <a class="link" target="_blank" href="https://instagram.com/mr.marshanskiy">@mr.marshanskiy</a>
+                <p class="link">@mr.marshanskiy</p>
             </div>
-        </div>
-        <div class="cell">
+        </a>
+        <a class="cell" target="_blank" href="https://instagram.com/moskvitin.bg">
             <div class="avatar__bg"></div>
              <div>
                 <p class="text">Богдан Москвитин</p>
-                <a class="link" target="_blank" href="https://instagram.com/moskvitin.bg">@moskvitin.bg</a>
+                <p class="link">@moskvitin.bg</p>
             </div>
-        </div>
+        </a>
     </div>
 
     <p class="footer">Free Team Games 1.1</p>
