--- a/src/app/main/components/change-password/change-password.component.html
+++ b/src/app/main/components/change-password/change-password.component.html
@@ -1,45 +1,31 @@
 <div class="container">
     <p class="title">Изменить пароль</p>
     <form [formGroup]="changeForm" novalidate (ngSubmit)="checkForm()">
-        <table>
-            <tr>
-                <td class="td__title"> <span class="auth__subtitle">Новый пароль:</span> </td>
-                <td> 
-                    <mat-form-field appearance="fill">
-                        <mat-label>Новый пароль</mat-label>
-                        <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
-                        <button class="btn__icon" type="button" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                        </button>
-                    </mat-form-field>
-                    <span class="err" *ngIf="changeForm.controls['password'].invalid && changeForm.controls['password'].touched">Введите новый пароль!</span>
-                </td>
-            </tr>
-            <tr>
-                <td class="td__title"> <span class="auth__subtitle">Повторите пароль:</span> </td>
-                <td> 
-                    <mat-form-field appearance="fill">
-                        <mat-label>Повторите пароль</mat-label>
-                        <input matInput [type]="hide2 ? 'password' : 'text'" formControlName="password2">
-                        <button class="btn__icon" type="button" mat-icon-button matSuffix (click)="hide2 = !hide2" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                            <mat-icon>{{hide2 ? 'visibility_off' : 'visibility'}}</mat-icon>
-                        </button>
-                    </mat-form-field>
-                    <span class="err" *ngIf="changeForm.controls['password2'].invalid && changeForm.controls['password2'].touched || checkPassword == true">Повторите пароль!</span>
-                </td>
-            </tr>
-            <!-- <tr>
-                <td>
-                    <button class="btn" [routerLink]="['../user']" type="button">Отмена</button>
-                </td>
-                <td> 
-                    <button class="btn" [disabled]="changeForm.invalid || changeForm.disabled">Изменить</button>
-                </td>
-            </tr> -->
-        </table>
-        <div style="display: flex; flex-wrap: wrap;">
-            <button class="btn" [routerLink]="['../user']" type="button">Отмена</button> 
-            <button class="btn" [disabled]="changeForm.invalid || changeForm.disabled">Изменить</button>
+        <div style="display: flex; flex-direction: column; align-items: center;">
+            <mat-form-field appearance="fill">
+                <mat-label>Новый пароль</mat-label>
+                <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" style="color: #EEF5F8">
+                <button class="btn__icon" type="button" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                    <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                </button>
+            </mat-form-field>
+
+            <mat-form-field appearance="fill">
+                <mat-label>Повторите пароль</mat-label>
+                <input matInput [type]="hide2 ? 'password' : 'text'" formControlName="password2" style="color: #EEF5F8">
+                <button class="btn__icon" type="button" mat-icon-button matSuffix (click)="hide2 = !hide2" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                    <mat-icon>{{hide2 ? 'visibility_off' : 'visibility'}}</mat-icon>
+                </button>
+            </mat-form-field>
+
+            <div>
+                <button mat-raised-button style="background: #788CA0; width: 250px;" 
+                [routerLink]="['../user']" type="button">Отмена</button>
+            </div>
+            <div style="margin-top: 10px">
+                <button mat-raised-button style="background: #788CA0; width: 250px;" 
+                [disabled]="changeForm.invalid || changeForm.disabled">Изменить</button>
+            </div>
         </div>
     </form>
 </div>
