--- a/src/app/main/components/header/header.component.html
+++ b/src/app/main/components/header/header.component.html
@@ -19,7 +19,7 @@
         </button>
 
         <div class="header">
-            <div class="logo"></div>
+            <div [routerLink]="['./home']" class="logo"></div>
         
             <div>
                 <a routerLinkActive="active" class="link" [routerLink]="['./home']">Главная</a>
