--- a/src/app/auth/components/register/register.component.scss
+++ b/src/app/auth/components/register/register.component.scss
@@ -1,56 +1,31 @@
+$grey: #788CA0;
+$light: #EEF5F8;
+$blue: #007EA7;
+$dark: #121218;
+$lightdark: #1C1C24;
 .container {
-    width: 470px;
-    border: 1px solid #ccc;
+    width: 280px;
+    border: 1px solid $grey;
     border-radius: 5px;
     padding: 20px 30px;
-    margin: 200px auto 0 auto;
+    margin: 100px auto 0 auto;
+    background: $lightdark;
 }
-.auth__title {
+.title {
+    color: $light;
     font-size: 30px;
     text-align: center;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
+    user-select: none;
 }
-td {
-    position: relative;
-    text-align: end;
-    padding: 15px 0;
-}
-.auth__subtitle {
-    font-size: 18px;
-    margin-right: 10px;
-}
-.auth__input {
-    height: 25px;
-    font-size: 18px;
-    padding-left: 5px;
-}
-.auth__err {
-    position: absolute;
-    display: block;
-    font-size: 16px;
-    color: red;
-}
-.auth__btn {
-    width: 225px;
-    height: 29px;
-    font-size: 16px;
+.subtitle {
+    color: $light;
+    font-size: 14px;
     cursor: pointer;
+    margin: 10px 0;
 }
 .btn__icon {
     border: none;
     background: none;
     cursor: pointer;
-}
-@media(max-width: 700px) {
-    .container {
-        width: 280px;
-        padding: 20px 0;
-    }
-    td {
-        padding: 5px 5px;
-        font-size: 15px;
-    }
-    .td__title {
-        display: none;
-    }
 }
