--- a/src/app/main/components/add-event/add-event.component.html
+++ b/src/app/main/components/add-event/add-event.component.html
@@ -1,81 +1,55 @@
-<button class="add-event__btn" [routerLink]="['../home']">назад</button>
 <div class="container">
     <p class="title">Добавить событие</p>
     <form [formGroup]="addEventForm" novalidate (ngSubmit)="sendService()">
-        <table>
-            <tr>
-                <td class="td__title"> <span class="add-event__subtitle">Вид спорта:</span> </td>
-                <td>
-                    <mat-form-field appearance="fill" style="width: 250px;">
-                        <mat-label>Вид спорта</mat-label>
-                        <mat-select formControlName="kind">
-                            <mat-option *ngFor="let kind of kinds?.results" [value]="kind.id">
-                                {{kind.name}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </td>
-            </tr>
-            <tr>
-                <td class="td__title"> <span class="add-event__subtitle">Тип события:</span> </td>
-                <td>
-                    <mat-form-field appearance="fill" style="width: 250px;">
-                        <mat-label>Тип события</mat-label>
-                        <mat-select formControlName="type">
-                            <mat-option *ngFor="let type of types?.results" [value]="type.id">
-                                {{type.name}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </td>
-            </tr>
-            <tr>
-                <td class="td__title"> <span class="add-event__subtitle">Дата:</span> </td>
-                <td>
-                    <mat-form-field color="accent" appearance="fill" style="width: 250px;">
-                        <mat-label>Дата</mat-label>
-                        <input formControlName="date" matInput [matDatepicker]="picker2">
-                        <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-                        <mat-datepicker #picker2 color="primary"></mat-datepicker>
-                    </mat-form-field>
-                </td>
-            </tr>
-            <tr>
-                <td class="td__title"> <span class="add-event__subtitle">Время:</span> </td>
-                <td>
-                    <mat-form-field appearance="outline" style="width: 250px;">
-                        <mat-label>Время</mat-label>
-                        <input formControlName="time" type="time" matInput name="week" min="09:00" max="18:00">
-                    </mat-form-field>
-                </td>
-            </tr>
-            <tr>
-                <td class="td__title"> <span class="add-event__subtitle">Место:</span> </td>
-                <td>
-                    <mat-form-field appearance="fill" style="width: 250px;">
-                        <mat-label>Место</mat-label>
-                        <mat-select formControlName="location">
-                            <mat-option *ngFor="let location of locations?.results" [value]="location.id">
-                                {{location.name}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </td>
-            </tr>
-            
-            <tr>
-                <td class="td__title"> <span class="add-event__subtitle">Цена:</span> </td>
-                <td> 
-                    <input class="add-event__input" formControlName="price" style="width: 240px; height: 50px;" placeholder="Цена"> 
-                    <span class="add-event__err" *ngIf="addEventForm.controls['price'].invalid && addEventForm.controls['price'].touched">Введите цену!</span>
-                </td>
-            </tr>
-            <tr>
-                <td class="td__title"></td>
-                <td> 
-                    <button class="add-event__btn" [disabled]="addEventForm.invalid">Добавить событие</button>
-                </td>
-            </tr>
-        </table>
+        <div style="display: flex; flex-direction: column; align-items: center;">
+            <mat-form-field appearance="fill" style="width: 250px;">
+                <mat-label>Вид спорта</mat-label>
+                <mat-select formControlName="kind">
+                    <mat-option *ngFor="let kind of kinds?.results" [value]="kind.id">
+                        {{kind.name}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+
+            <mat-form-field appearance="fill" style="width: 250px;">
+                <mat-label>Тип события</mat-label>
+                <mat-select formControlName="type">
+                    <mat-option *ngFor="let type of types?.results" [value]="type.id">
+                        {{type.name}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+
+            <mat-form-field color="accent" appearance="fill" style="width: 250px;">
+                <mat-label>Дата</mat-label>
+                <input formControlName="date" matInput [matDatepicker]="picker2" style="color: #EEF5F8">
+                <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                <mat-datepicker #picker2 color="primary"></mat-datepicker>
+            </mat-form-field>
+
+            <mat-form-field appearance="outline" style="width: 250px;">
+                <mat-label>Время</mat-label>
+                <input formControlName="time" type="time" matInput name="week" min="09:00" max="18:00" style="color: #EEF5F8">
+            </mat-form-field>
+
+            <mat-form-field appearance="fill" style="width: 250px;">
+                <mat-label>Место</mat-label>
+                <mat-select formControlName="location">
+                    <mat-option *ngFor="let location of locations?.results" [value]="location.id">
+                        {{location.name}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+
+            <mat-form-field class="example-full-width" appearance="fill" style="width: 250px;">
+                <mat-label>Цена</mat-label>
+                <input matInput formControlName="price" style="color: #EEF5F8">
+            </mat-form-field>
+
+            <div>
+                <button mat-raised-button style="background: #788CA0; width: 250px;" 
+                    [disabled]="addEventForm.invalid">Добавить событие</button>
+            </div>
+        </div>
     </form>
 </div>
