--- a/src/app/main/components/add-player/add-player.component.scss
+++ b/src/app/main/components/add-player/add-player.component.scss
@@ -1,10 +1,10 @@
-$grey: #CCDBDC;
-$light: #f1f1f1;
-$turquoise: #80CED7;
+$grey: #788CA0;
+$light: #EEF5F8;
 $blue: #007EA7;
-$dark: #003249;
+$dark: #121218;
+$lightdark: #1C1C24;
 .container {
-    width: 400px;
+    width: 300px;
     border: 1px solid $grey;
     border-radius: 5px;
     padding: 20px 30px;
@@ -13,65 +13,14 @@ $dark: #003249;
 .title {
     font-size: 30px;
     text-align: center;
-    padding-bottom: 10px;
-    color: $dark;
+    padding-bottom: 20px;
+    color: $light;
+    user-select: none;
 }
-td {
-    position: relative;
-    text-align: end;
-    padding: 15px 0;
-}
-.add-player__subtitle {
+.subtitle {
+    color: $light;
     font-size: 18px;
     margin-right: 10px;
-}
-.add-player__input {
-    width: 240px;
-    height: 50px;
-    font-size: 18px;
-    padding-left: 10px;
-    border: 1px solid $grey;
-    border-radius: 5px;
-}
-.add-player__err {
-    position: absolute;
-    display: block;
-    font-size: 16px;
-    color: red;
-}
-.add-player__btn {
-    width: 228px;
-    height: 29px;
-    font-size: 16px;
-    border: 1px solid $grey;
-    cursor: pointer;
-}
-.add-player__btn:hover {
-    background: $grey;
-}
-.btn {
-    width: 100%;
-    height: 29px;
-    font-size: 16px;
-    cursor: pointer;
-    border: 1px solid $grey;
-    background: $blue;
-    margin-top: 20px;
-    color: $light;
-}
-.btn:hover {
-    background: $turquoise;
-}
-@media(max-width: 700px) {
-    .container {
-        width: 280px;
-        padding: 20px 0;
-    }
-    td {
-        padding: 5px 5px;
-        font-size: 15px;
-    }
-    .td__title {
-        display: none;
-    }
+    margin-bottom: 20px;
+    text-align: center;
 }
