--- a/src/app/main/components/add-team/add-team.component.scss
+++ b/src/app/main/components/add-team/add-team.component.scss
@@ -1,42 +1,24 @@
-.add-team {
-    width: 450px;
-    border: 1px solid #ccc;
+$grey: #788CA0;
+$light: #EEF5F8;
+$blue: #007EA7;
+$dark: #121218;
+$lightdark: #1C1C24;
+.container {
+    width: 300px;
+    border: 1px solid $grey;
     border-radius: 5px;
     padding: 20px 30px;
     margin: 100px auto 0 auto;
+    background: $lightdark;
 }
-.add-team__title {
+.title {
     font-size: 30px;
     text-align: center;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
+    color: $light;
+    user-select: none;
 }
-td {
-    position: relative;
-    text-align: end;
-    padding: 15px 0;
-}
-.add-team__subtitle {
+.subtitle {
     font-size: 18px;
     margin-right: 10px;
-}
-.add-team__input {
-    height: 25px;
-    font-size: 18px;
-    padding-left: 5px;
-}
-.add-team__err {
-    position: absolute;
-    display: block;
-    font-size: 16px;
-    color: red;
-}
-.add-team__btn {
-    width: 228px;
-    height: 29px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    cursor: pointer;
-}
-.add-team__btn:hover {
-    background: #E0E4E7;
 }
