--- a/src/app/main/components/home/home.component.scss
+++ b/src/app/main/components/home/home.component.scss
@@ -1,9 +1,10 @@
-$grey: #CCDBDC;
-$light: #f1f1f1;
-$turquoise: #80CED7;
+$grey: #788CA0;
+$light: #EEF5F8;
 $blue: #007EA7;
-$dark: #003249;
+$dark: #121218;
+$lightdark: #1C1C24;
 .container {
+    background: $lightdark;
     width: 1000px;
     border: 1px solid $grey;
     border-radius: 5px;
@@ -18,12 +19,14 @@ table {
     font-size: 30px;
     text-align: center;
     padding-bottom: 10px;
-    color: $dark;
+    color: $light;
+    user-select: none;
 }
 .tr__head {
     background-color: $blue;
     td {
-        color: $light
+        color: $light;
+        cursor: default;
     }
 }
 td {
@@ -32,10 +35,10 @@ td {
     font-size: 18px;
     text-align: center;
     cursor: pointer;
-    color: $dark;
+    color: $light;
 }
 .tr:hover {
-    background-color: $light;
+    background-color: $grey;
 }
 .btn {
     width: 100%;
@@ -48,7 +51,7 @@ td {
     color: $light;
 }
 .btn:hover {
-    background: $turquoise;
+    background: $grey;
 }
 @media(max-width: 700px) {
     .container {
