--- a/src/app/main/components/player/player.component.scss
+++ b/src/app/main/components/player/player.component.scss
@@ -1,46 +1,17 @@
-$grey: #CCDBDC;
-$light: #f1f1f1;
-$turquoise: #80CED7;
+$grey: #788CA0;
+$light: #EEF5F8;
 $blue: #007EA7;
-$dark: #003249;
+$dark: #121218;
+$lightdark: #1C1C24;
 .players {
-    width: 550px;
+    width: 300px;
     border: 1px solid $grey;
     border-radius: 5px;
     padding: 20px 30px;
     margin: 100px auto 0 auto;
-}
-.players__title {
-    font-size: 30px;
-    text-align: center;
-    padding-bottom: 10px;
-}
-table {
-    border-collapse: collapse;
-    width: 100%;
-}
-td {
-    border-bottom: 1px solid $grey;
-    padding: 10px 30px;
-    font-size: 18px;
-    text-align: center;
-    cursor: pointer;
-}
-.tr:hover {
-    background-color: $grey;
-}
-.players__btn {
-    width: 100%;
-    height: 29px;
-    font-size: 16px;
-    cursor: pointer;
-    border: 1px solid $grey;
-    margin-top: 20px;
-}
-.players__btn:hover {
-    background: $grey;
+    background: $lightdark;
 }
 .subtitle {
-    color: $dark;
+    color: $light;
     font-size: 20px;
 }
