--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
-@import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
+@import "../node_modules/@angular/material/prebuilt-themes/purple-green.css";
+$grey: #788CA0;
+$light: #EEF5F8;
+$turquoise: #80CED7;
+$blue: #007EA7;
+$dark: #121218;
+$lightdark: #1C1C24;
 * {
     font-family: sans-serif;
     margin: 0;
     padding: 0;
+}
+body {
+    background-color: $dark;
 }
