--- a/src/app/main/components/header/header.component.scss
+++ b/src/app/main/components/header/header.component.scss
@@ -65,7 +65,7 @@ ng-sidebar-container {
     height: 100vh;
 }
 ::ng-deep .ng-sidebar {
-    background-color: $grey;
+    background-color: $lightdark;
     width: 100%;
     height: 100%;
 }
@@ -81,7 +81,7 @@ ng-sidebar-container {
     font-style: normal;
     font-size: 25px;
     transition: all 0.4s ease-in-out;
-    color: $dark;
+    color: $light;
     text-decoration-line: none;
 }
 .burger__a:hover {
@@ -163,7 +163,7 @@ ng-sidebar-container {
 	top: 5px;
 	width: 30px;
 	height: 5px;
-    background-color: $dark;
+    background-color: $light;
     border-radius: 25%;
 
     transform: rotate(0deg);
@@ -176,7 +176,7 @@ ng-sidebar-container {
 	top: 5px;
 	width: 30px;
 	height: 5px;
-    background-color: $dark;
+    background-color: $light;
     border-radius: 25%;
 
     transform: rotate(45deg);
@@ -189,7 +189,7 @@ ng-sidebar-container {
 	top: 25px;
 	width: 30px;
 	height: 5px;
-    background-color: $dark;
+    background-color: $light;
     border-radius: 25%;
 
     transform: rotate(0deg);
@@ -202,7 +202,7 @@ ng-sidebar-container {
 	top: 25px;
 	width: 30px;
 	height: 5px;
-    background-color: $dark;
+    background-color: $light;
     border-radius: 25%;
 
     transform: rotate(-45deg);
