--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/@angular/material/prebuilt-themes/purple-green.css";
+@import '~ngx-toastr/toastr';
 $grey: #788CA0;
 $light: #EEF5F8;
 $turquoise: #80CED7;
