--- a/src/app/main/components/header/header.component.scss
+++ b/src/app/main/components/header/header.component.scss
@@ -9,7 +9,14 @@ $lightdark: #1C1C24;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    padding: 10px 0;
+    background: $dark;
+    margin: 0 20px;
+}
+@media(max-width: 500px) {
+    .header {
+        margin: 0 10px;
+    }
 }
 .logo {
     width: 200px;
