--- a/src/app/main/components/home/home.component.html
+++ b/src/app/main/components/home/home.component.html
@@ -4,7 +4,8 @@
         <tr class="tr__head">
             <td>Вид спорта</td>
             <td>Тип события</td>
-            <td>Время</td>
+            <td>Время начала</td>
+            <td>Время конца</td>
             <td>Место</td>
             <td>Цена</td>
             <td>Кол-во игроков</td>
@@ -14,11 +15,27 @@
             <td [routerLink]="['../event', event.id]">{{event.kind}}</td>
             <td [routerLink]="['../event', event.id]">{{event.type}}</td>
             <td [routerLink]="['../event', event.id]">{{event.time_start | date: 'dd.MM.YYYY HH:mm'}}</td>
+            <td [routerLink]="['../event', event.id]">{{event.time_end | date: 'dd.MM.YYYY HH:mm'}}</td>
             <td [routerLink]="['../event', event.id]">{{event.location.name}}</td>
             <td [routerLink]="['../event', event.id]">{{event.price}}</td>
             <td [routerLink]="['../event', event.id]">{{event.players_count}}</td>
             <td [routerLink]="['../event', event.id]">{{event.status}}</td>
         </tr>
     </table>
+    <div class="mobile">
+        <div *ngFor="let event of events?.results" [routerLink]="['../event', event.id]" class="cell">
+            <div style="display: flex; justify-content: space-between;">
+                <p style="font-size: 16px;">{{event.kind}}</p>
+                <p style="font-size: 16px;">{{event.type}}</p>
+            </div>
+            <p style="text-align: center; font-size: 16px;">{{event.time_start | date: 'dd.MM.YYYY'}}</p>
+            <p style="text-align: center; font-size: 24px; font-weight: bold;">{{event.time_start | date: 'HH:mm'}} - {{event.time_end | date: 'HH:mm'}}</p>
+            <div style="display: flex; justify-content: space-between;">
+                <p style="font-size: 18px;">{{event.location.name}}</p>
+                <p style="font-size: 18px;">{{event.price}}&#8381;</p>
+                <p style="font-size: 18px;">{{event.players_count}}чел.</p>
+            </div>
+        </div>
+    </div>
     <button class="btn" [routerLink]="['../add-event']">Добавить событие</button>
 </div>
