--- a/src/app/main/components/home/home.component.scss
+++ b/src/app/main/components/home/home.component.scss
@@ -4,12 +4,12 @@ $blue: #007EA7;
 $dark: #121218;
 $lightdark: #1C1C24;
 .container {
-    background: $lightdark;
-    width: 1000px;
+    width: 1150px;
     border: 1px solid $grey;
     border-radius: 5px;
     padding: 20px 30px;
     margin: 100px auto 0 auto;
+    background: $lightdark;
 }
 table {
     border-collapse: collapse;
@@ -53,13 +53,32 @@ td {
 .btn:hover {
     background: $grey;
 }
-@media(max-width: 700px) {
+.cell {
+    border-top: 1px solid $grey;
+    border-bottom: 1px solid $grey;
+    margin-bottom: 5px;
+    border-radius: 5px;
+    background: $lightdark;
+    width: 260px;
+    height: 110px;
+    padding: 10px;
+}
+p {
+    color: $light;
+    padding: 3px 0;
+}
+.mobile {
+    display: none;
+}
+@media(max-width: 1250px) {
     .container {
         width: 280px;
         padding: 20px 0;
     }
-    td {
-        padding: 5px 5px;
-        font-size: 15px;
+    table {
+        display: none;
+    }
+    .mobile {
+        display: block;
     }
 }
