--- a/src/app/auth/components/login/login.component.scss
+++ b/src/app/auth/components/login/login.component.scss
@@ -30,3 +30,8 @@ $lightdark: #1C1C24;
     cursor: pointer;
     margin: 10px 0;
 }
+@media(max-width: 1024px) {
+    .container {
+        margin: 50px auto;
+    }
+}
