--- a/src/app/main/components/header/header.component.scss
+++ b/src/app/main/components/header/header.component.scss
@@ -33,17 +33,6 @@ $lightdark: #1C1C24;
     color: $light;
     padding: 36px 31px;
 }
-@media(max-width: 1150px) {
-    .link {
-        display: none;
-    }
-    .box {
-        display: none;
-    }
-    .avatar {
-        display: none;
-    }
-}
 .active {
     color: $blue;
     text-decoration: underline;
@@ -61,10 +50,31 @@ $lightdark: #1C1C24;
     background-color: $blue;
 }
 .router-outlet {
-    padding: 20px;
+    padding: 10px;
 }
-
-
+.btn {
+    background: $blue; 
+    width: 150px; 
+    height: 30px; 
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+    margin-right: 10px;
+}
+@media(max-width: 1150px) {
+    .link {
+        display: none;
+    }
+    .box {
+        display: none;
+    }
+    .avatar {
+        display: none;
+    }
+    .btn {
+        display: none;
+    }
+}
 
 
 
@@ -77,11 +87,29 @@ ng-sidebar-container {
     height: 100%;
 }
 .burger__ul {
-    margin: 100px 0 0 30px; 
+    margin: 80px 30px 0 30px; 
     list-style: none;
+}
+.burger__user {
+    display: flex; 
+    align-items: center;
+}
+.burger__avatar {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: $blue;
+    margin: 10px 10px 10px 0;
+}
+.line {
+    border-bottom: 1px solid $grey;
+    width: 100%;
+    margin-bottom: 10px;
 }
 .burger__li {
     padding: 0 0 15px 0;
+    display: flex;
+    align-items: center;
 }
 .burger__a {
     font-family: 'Roboto', sans-serif;
@@ -90,6 +118,7 @@ ng-sidebar-container {
     transition: all 0.4s ease-in-out;
     color: $light;
     text-decoration-line: none;
+    margin-left: 10px;
 }
 .burger__a:hover {
     color: $blue;
@@ -215,6 +244,10 @@ ng-sidebar-container {
     transform: rotate(-45deg);
     transform-origin: 5%;
     transition: transform 0.5s;
+}
+p {
+    color: $light;
+    font-size: 20px;
 }
 @media(max-width: 500px) {
     .logo {
