--- a/src/app/main/components/home/home.component.scss
+++ b/src/app/main/components/home/home.component.scss
@@ -11,6 +11,15 @@ $lightdark: #1C1C24;
     margin: 100px auto 0 auto;
     background: $lightdark;
 }
+.head {
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
+    margin-bottom: 10px;
+}
+.empty {
+    width: 150px;
+}
 table {
     border-collapse: collapse;
     width: 100%;
@@ -18,7 +27,6 @@ table {
 .title {
     font-size: 30px;
     text-align: center;
-    padding-bottom: 10px;
     color: $light;
     user-select: none;
 }
@@ -41,17 +49,12 @@ td {
     background-color: $grey;
 }
 .btn {
-    width: 100%;
-    height: 29px;
-    font-size: 16px;
-    cursor: pointer;
-    border: 1px solid $grey;
-    background: $blue;
-    margin-top: 20px;
-    color: $light;
-}
-.btn:hover {
-    background: $grey;
+    background: $blue; 
+    width: 150px; 
+    height: 30px; 
+    display: flex; 
+    align-items: center; 
+    justify-content: center;
 }
 .cell {
     border-top: 1px solid $grey;
@@ -59,7 +62,7 @@ td {
     margin-bottom: 5px;
     border-radius: 5px;
     background: $lightdark;
-    width: 260px;
+    width: 280px;
     height: 110px;
     padding: 10px;
 }
@@ -72,8 +75,14 @@ p {
 }
 @media(max-width: 1250px) {
     .container {
-        width: 280px;
+        width: 300px;
         padding: 20px 0;
+    }
+    .empty {
+        display: none;
+    }
+    .title {
+        font-size: 20px;
     }
     table {
         display: none;
