--- a/src/app/main/components/user/user.component.scss
+++ b/src/app/main/components/user/user.component.scss
@@ -11,14 +11,26 @@ $lightdark: #1C1C24;
     margin: 100px auto 0 auto;
     background: $lightdark;
 }
+.head {
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
+    padding-bottom: 10px;
+    flex-wrap: wrap;
+}
+.avatar {
+    width: 100px; 
+    height: 100px; 
+    background: $blue; 
+    margin-right: 20px; 
+    border-radius: 5px;
+}
 table {
     border-collapse: collapse;
     width: 100%;
 }
 .title {
     font-size: 30px;
-    text-align: center;
-    padding-bottom: 10px;
     color: $light;
     user-select: none;
 }
@@ -41,17 +53,8 @@ td {
     background-color: $grey;
 }
 .btn {
-    width: 100%;
-    height: 29px;
-    font-size: 16px;
-    cursor: pointer;
-    border: 1px solid $grey;
-    background: $blue;
-    margin-top: 10px;
-    color: $light;
-}
-.btn:hover {
-    background: $grey;
+    background: $blue; 
+    width: 150px;
 }
 .subtitle {
     font-size: 16px;
@@ -62,12 +65,30 @@ td {
 .text {
     font-size: 18px;
     color: $light;
-    padding-bottom: 10px;
+    padding: 5px 0;
+}
+p {
+    color: $light;
+}
+.box {
+    width: 280px; 
+    padding: 10px; 
+    height: 60px; 
+    margin-bottom: 10px; 
+    border-bottom: 1px solid $grey; 
+    border-top: 1px solid $grey; 
+    border-radius: 5px;
 }
 @media(max-width: 700px) {
     .container {
-        width: 280px;
+        width: 300px;
         padding: 20px 0;
+    }
+    .title {
+        font-size: 20px;
+    }
+    .avatar {
+        display: none;
     }
     td {
         padding: 5px 5px;
