--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/@angular/material/prebuilt-themes/purple-green.css";
 @import '~ngx-toastr/toastr';
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
 $grey: #788CA0;
 $light: #EEF5F8;
 $turquoise: #80CED7;
@@ -8,7 +9,7 @@ $blue: #007EA7;
 $dark: #121218;
 $lightdark: #1C1C24;
 * {
-    font-family: sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     margin: 0;
     padding: 0;
 }
