--- a/src/app/main/components/change-password/change-password.component.scss
+++ b/src/app/main/components/change-password/change-password.component.scss
@@ -7,7 +7,7 @@ $lightdark: #1C1C24;
     width: 300px;
     border: 1px solid $grey;
     border-radius: 5px;
-    padding: 20px 30px;
+    padding: 20px 0;
     margin: 100px auto 0 auto;
     background: $lightdark;
 }
