--- a/src/app/main/components/history/history.component.scss
+++ b/src/app/main/components/history/history.component.scss
@@ -4,12 +4,37 @@ $blue: #007EA7;
 $dark: #121218;
 $lightdark: #1C1C24;
 .container {
-    width: 1150px;
+    width: 1160px;
     border: 1px solid $grey;
     border-radius: 5px;
     padding: 20px 30px;
     margin: 100px auto 0 auto;
     background: $lightdark;
+}
+.head {
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
+    margin-bottom: 10px;
+    flex-wrap: wrap;
+}
+.empty {
+    width: 310px;
+}
+.title {
+    font-size: 30px;
+    text-align: center;
+    color: $light;
+    user-select: none;
+}
+.btn {
+    background: $blue; 
+    width: 150px; 
+    height: 30px; 
+    display: flex; 
+    align-items: center; 
+    justify-content: center;
+    margin-left: 10px;
 }
 table {
     border-collapse: collapse;
@@ -19,7 +44,6 @@ table {
 .title {
     font-size: 30px;
     text-align: center;
-    padding-bottom: 10px;
     color: $light;
     user-select: none;
 }
@@ -40,19 +64,6 @@ td {
 }
 .tr:hover {
     background-color: $grey;
-}
-.btn {
-    width: 100%;
-    height: 29px;
-    font-size: 16px;
-    cursor: pointer;
-    border: 1px solid $grey;
-    background: $blue;
-    margin-top: 20px;
-    color: $light;
-}
-.btn:hover {
-    background: $grey;
 }
 .cell {
     border-top: 1px solid $grey;
@@ -81,5 +92,13 @@ p {
     }
     .mobile {
         display: block;
+    }
+    .btn { 
+        width: 150px; 
+        height: 30px; 
+        display: flex; 
+        align-items: center; 
+        justify-content: center;
+        margin-left: 0;
     }
 }
