--- a/src/app/main/components/user/user.component.html
+++ b/src/app/main/components/user/user.component.html
@@ -1,33 +1,47 @@
 <div class="container">
     <div class="head">
-        <p class="title">Привет {{mydata.first_name}} {{mydata.last_name}}!</p>
+        <div style="display: flex; align-items: center;">
+            <p class="title">{{mydata.first_name}} {{mydata.last_name}}</p>
+            <mat-icon class="logout" aria-hidden="false" aria-label="Example logout icon" (click)="logout($event)">logout</mat-icon>
+        </div>
         <button mat-raised-button class="btn" [routerLink]="['../user-change']">Изменить данные</button>
     </div>
     <div style="display: flex; align-items: center; margin-bottom: 20px;">
         <div class="avatar"></div>
-        <div style="width: 480px;">
+        <div style="width: 400px;">
+            <p class="text" style="font-size: 20px;">Основная информация</p>
             <div style="display: flex; justify-content: space-between;">
-                <p class="text">Почта: </p>
-                <p class="text">{{mydata.email}}</p>
+                <p class="text__title">Почта e-mail: </p>
+                <p class="text__data">{{mydata.email}}</p>
             </div>
             <div style="display: flex; justify-content: space-between;">
-                <p class="text">Номер телефона: </p>
-                <p class="text">{{mydata.phone_number}}</p>
+                <p class="text__title">Номер телефона: </p>
+                <p class="text__data">{{mydata.phone_number}}</p>
             </div>
             <div style="display: flex; justify-content: space-between;">
-                <p class="text">Всего участий в событиях: </p>
-                <p class="text">{{mydata.stats?.total_events}}</p>
+                <p class="text__title">Дата рождения: </p>
+                <p class="text__data">данных нет</p>
+            </div>
+            <div style="display: flex; justify-content: space-between;">
+                <p class="text__title">Всего участий в событиях: </p>
+                <p class="text__data" style="color: #089F5F;">{{mydata.stats?.total_events}}</p>
+            </div>
+            <div style="display: flex; justify-content: space-between;">
+                <p class="text__title">Дата регистрации: </p>
+                <p class="text__data">данных нет</p>
             </div>
         </div>
     </div>
 
-    <div class="box" *ngFor="let team of mydata.teams" [routerLink]="['../players', team.id]">
-        <p style="font-size: 24px; padding-bottom: 10px; text-align: center;">{{team.team.full_name}}</p>
-        <div style="display: flex; justify-content: space-between;">
-            <p>{{team.number}} номер</p>
-            <p style="text-align: center;">Кол-во игр: {{team.events_count}}</p>
+    <div class="teams__box">
+        <p class="text__data">Команды</p>
+        <div class="box" *ngFor="let team of mydata.teams" [routerLink]="['../players', team.team.id]">
+            <div class="line"></div>
+            <p style="font-size: 24px; padding-bottom: 10px;">{{team.team.full_name}}</p>
+            <div style="display: flex;">
+                <p class="text__title">Кол-во игр: <span class="text__data" style="color: #089F5F;">{{team.events_count}}</span></p>
+                <p class="text__title" style="margin-left: 20px;">Дата вступления: <span class="text__data">данных нет</span></p>
+            </div>
         </div>
     </div>
-
-    <p class="subtitle">Free Team Games 1.1</p>
 </div>
