--- a/src/app/main/components/user/user.component.scss
+++ b/src/app/main/components/user/user.component.scss
@@ -5,11 +5,9 @@ $dark: #121218;
 $lightdark: #1C1C24;
 .container {
     width: 600px;
-    border: 1px solid $grey;
     border-radius: 5px;
     padding: 20px 30px;
     margin: 100px auto 0 auto;
-    background: $lightdark;
 }
 .head {
     display: flex; 
@@ -19,8 +17,8 @@ $lightdark: #1C1C24;
     flex-wrap: wrap;
 }
 .avatar {
-    width: 100px; 
-    height: 100px; 
+    width: 150px; 
+    height: 150px; 
     background: $blue; 
     margin-right: 20px; 
     border-radius: 5px;
@@ -33,6 +31,12 @@ table {
     font-size: 30px;
     color: $light;
     user-select: none;
+}
+.logout {
+    display: none;
+    color: #788CA0; 
+    cursor: pointer; 
+    margin-left: 10px;
 }
 .tr__head {
     background-color: $blue;
@@ -62,22 +66,33 @@ td {
     color: $light;
     padding-top: 20px;
 }
-.text {
-    font-size: 18px;
+.text__title {
+    font-size: 16px;
+    color: $grey;
+    padding: 5px 0;
+}
+.text__data {
+    font-size: 16px;
     color: $light;
     padding: 5px 0;
+    font-weight: 500;
+}
+.teams__box {
+    background-color: $lightdark;
+    border-radius: 5px;
+    padding: 20px;
+}
+.line {
+    border-bottom: 1px solid $grey;
+    margin: 10px 0;
 }
 p {
     color: $light;
 }
 .box {
-    width: 280px; 
-    padding: 10px; 
-    height: 60px; 
+    width: 100%;
+    height: 80px; 
     margin-bottom: 10px; 
-    border-bottom: 1px solid $grey; 
-    border-top: 1px solid $grey; 
-    border-radius: 5px;
 }
 @media(max-width: 700px) {
     .container {
@@ -93,5 +108,10 @@ p {
     td {
         padding: 5px 5px;
         font-size: 15px;
+    }
+}
+@media(max-width: 1150px) {
+    .logout {
+        display: block;
     }
 }
