--- a/src/app/main/components/home/home.component.html
+++ b/src/app/main/components/home/home.component.html
@@ -3,6 +3,7 @@
         <div class="empty"></div>
         <p class="title">Список событий</p>
         <button mat-raised-button class="btn" [routerLink]="['../add-event']">Добавить событие</button>
+        <mat-icon class="add" aria-hidden="false" aria-label="Example add icon" [routerLink]="['../add-event']">add</mat-icon>
     </div>
     <table>
         <tr class="tr__head">
