--- a/src/app/main/components/locations/locations.component.html
+++ b/src/app/main/components/locations/locations.component.html
@@ -3,6 +3,7 @@
         <div class="empty"></div>
         <p class="title">Список мест</p>
         <button mat-raised-button class="btn" [routerLink]="['../add-location']">Добавить место</button>
+        <mat-icon class="add" aria-hidden="false" aria-label="Example add icon" [routerLink]="['../add-location']">add</mat-icon>
     </div>
     <table>
         <tr class="tr__head">
