--- a/src/app/main/components/teams/teams.component.html
+++ b/src/app/main/components/teams/teams.component.html
@@ -3,6 +3,7 @@
         <div class="empty"></div>
         <p class="title" style="margin-left: 10px;">Список команд</p>
         <button mat-raised-button class="btn" [routerLink]="['../add-team']">Добавить команду</button>
+        <mat-icon class="add" aria-hidden="false" aria-label="Example add icon" [routerLink]="['../add-team']">add</mat-icon>
     </div>
     <table>
         <tr class="tr__head">
