--- a/src/app/main/components/add-event/add-event.component.scss
+++ b/src/app/main/components/add-event/add-event.component.scss
@@ -6,9 +6,8 @@ $lightdark: #1C1C24;
 .container {
     background: $lightdark;
     width: 300px;
-    border: 1px solid $grey;
     border-radius: 5px;
-    padding: 20px 30px;
+    padding: 20px 0;
     margin: 100px auto 0 auto;
 }
 .title {
