--- a/src/app/main/components/header/header.component.html
+++ b/src/app/main/components/header/header.component.html
@@ -1,29 +1,33 @@
 <ng-sidebar-container style="overflow: hidden;">
     <ng-sidebar [opened]="opened" position="top">
         <ul class="burger__ul">
-            <div class="burger__user" (click)='toggleSidebar()' [routerLink]="['./user']">
-                <div class="burger__avatar"></div>
-                <p>{{mydata.first_name}} {{mydata.last_name}}</p>
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+                <div class="burger__user" (click)='toggleSidebar()' [routerLink]="['./user']">
+                    <div class="burger__avatar"></div>
+                    <p>{{mydata.first_name}} {{mydata.last_name}}</p>
+                </div>
+                <mat-icon class="burger__logout" aria-hidden="false" aria-label="Example logout icon" (click)="logout($event)">logout</mat-icon>
             </div>
+    
             <div class="line"></div>
             <li (click)='toggleSidebar()' class="burger__li">
-                <mat-icon style="color: #EEF5F8;" aria-hidden="false" aria-label="Example home icon">home</mat-icon>
+                <mat-icon style="color: #788CA0;" aria-hidden="false" aria-label="Example home icon">home</mat-icon>
                 <a [routerLink]="['./home']" class="burger__a">Главная</a>
             </li>
             <li (click)='toggleSidebar()' class="burger__li">
-                <mat-icon style="color: #EEF5F8;" aria-hidden="false" aria-label="Example home icon">groups</mat-icon>
+                <mat-icon style="color: #788CA0;" aria-hidden="false" aria-label="Example home icon">groups</mat-icon>
                 <a [routerLink]="['./teams']" class="burger__a">Команды</a>
             </li>
             <li (click)='toggleSidebar()' class="burger__li">
-                <mat-icon style="color: #EEF5F8;" aria-hidden="false" aria-label="Example home icon">place</mat-icon>
+                <mat-icon style="color: #788CA0;" aria-hidden="false" aria-label="Example home icon">place</mat-icon>
                 <a [routerLink]="['./locations']" class="burger__a">Места</a>
             </li>
             <li (click)='toggleSidebar()' class="burger__li">
-                <mat-icon style="color: #EEF5F8;" aria-hidden="false" aria-label="Example home icon">history</mat-icon>
+                <mat-icon style="color: #788CA0;" aria-hidden="false" aria-label="Example home icon">history</mat-icon>
                 <a [routerLink]="['./history']" class="burger__a">История</a>
             </li>
             <li (click)='toggleSidebar()' class="burger__li">
-                <mat-icon style="color: #EEF5F8;" aria-hidden="false" aria-label="Example home icon">sentiment_very_satisfied</mat-icon>
+                <mat-icon style="color: #788CA0;" aria-hidden="false" aria-label="Example home icon">sentiment_very_satisfied</mat-icon>
                 <a [routerLink]="['./about-us']" class="burger__a">О нас</a>
             </li>
         </ul>
