--- a/src/app/main/components/header/header.component.scss
+++ b/src/app/main/components/header/header.component.scss
@@ -13,11 +13,6 @@ $lightdark: #1C1C24;
     background: $dark;
     margin: 0 20px;
 }
-@media(max-width: 500px) {
-    .header {
-        margin: 0 10px;
-    }
-}
 .logo {
     width: 350px;
     height: 70px;
@@ -115,6 +110,9 @@ ng-sidebar-container {
     border-radius: 50%;
     background-color: $blue;
     margin: 10px 10px 10px 0;
+}
+.burger__logout {
+    color: $light;
 }
 .line {
     border-bottom: 1px solid $grey;
@@ -267,16 +265,6 @@ p {
     color: $light;
     font-size: 20px;
 }
-@media(max-width: 500px) {
-    .logo {
-        width: 100px;
-        height: 50px;
-    }
-    .burger {
-        top: 20px;
-        right: 20px;
-    }
-}
 @media(max-width: 1400px) {
     .version {
         display: none;
@@ -297,5 +285,18 @@ p {
     }
     .box {
         width: 150px;
+    }
+}
+@media(max-width: 500px) {
+    .header {
+        margin: 0 10px;
+    }
+    .logo {
+        width: 100px;
+        height: 50px;
+    }
+    .burger {
+        top: 20px;
+        right: 20px;
     }
 }
