--- a/src/app/main/components/home/home.component.scss
+++ b/src/app/main/components/home/home.component.scss
@@ -4,8 +4,7 @@ $blue: #007EA7;
 $dark: #121218;
 $lightdark: #1C1C24;
 .container {
-    width: 1150px;
-    border: 1px solid $grey;
+    width: 1160px;
     border-radius: 5px;
     padding: 20px 30px;
     margin: 100px auto 0 auto;
@@ -73,10 +72,17 @@ p {
 .mobile {
     display: none;
 }
+.add {
+    display: none;
+    color: $light;
+    font-size: 30px;
+    padding-bottom: 10px;
+}
 @media(max-width: 1250px) {
     .container {
         width: 300px;
         padding: 20px 0;
+        margin: 50px auto 0 auto;
     }
     .empty {
         display: none;
@@ -88,6 +94,12 @@ p {
         display: none;
     }
     .mobile {
+        display: block;
+    }
+    .btn {
+        display: none;
+    }
+    .add {
         display: block;
     }
 }
