--- a/src/app/main/components/locations/locations.component.scss
+++ b/src/app/main/components/locations/locations.component.scss
@@ -5,7 +5,6 @@ $dark: #121218;
 $lightdark: #1C1C24;
 .container {
     width: 600px;
-    border: 1px solid $grey;
     border-radius: 5px;
     padding: 20px 30px;
     margin: 100px auto 0 auto;
@@ -56,11 +55,17 @@ td {
     align-items: center; 
     justify-content: center;
 }
-
+.add {
+    display: none;
+    color: $light;
+    font-size: 30px;
+    padding-bottom: 10px;
+}
 @media(max-width: 700px) {
     .container {
         width: 300px;
         padding: 20px 0;
+        margin: 50px auto 0 auto;
     }
     .empty {
         display: none;
@@ -71,5 +76,11 @@ td {
     td {
         padding: 5px 5px;
         font-size: 15px;
+    }
+    .btn {
+        display: none;
+    }
+    .add {
+        display: block;
     }
 }
