--- a/src/app/main/components/teams/teams.component.scss
+++ b/src/app/main/components/teams/teams.component.scss
@@ -5,7 +5,6 @@ $dark: #121218;
 $lightdark: #1C1C24;
 .container {
     width: 600px;
-    border: 1px solid $grey;
     border-radius: 5px;
     padding: 20px 30px;
     margin: 100px auto 0 auto;
@@ -60,11 +59,17 @@ td {
 p {
     color: $light;
 }
-
+.add {
+    display: none;
+    color: $light;
+    font-size: 30px;
+    padding-bottom: 10px;
+}
 @media(max-width: 700px) {
     .container {
         width: 300px;
         padding: 20px 0;
+        margin: 50px auto 0 auto;
     }
     .empty {
         display: none;
@@ -75,5 +80,11 @@ p {
     td {
         padding: 5px 5px;
         font-size: 15px;
+    }
+    .btn {
+        display: none;
+    }
+    .add {
+        display: block;
     }
 }
