--- a/src/app/main/components/header/header.component.scss
+++ b/src/app/main/components/header/header.component.scss
@@ -42,6 +42,7 @@ $lightdark: #1C1C24;
     font-size: 14px;
     color: $grey;
     margin-right: 10px;
+    user-select: none;
 }
 .avatar {
     width: 50px;
@@ -53,6 +54,7 @@ $lightdark: #1C1C24;
     font-size: 16px;
     color: $light;
     margin-left: 10px;
+    user-select: none;
 }
 .logout {
     color: #788CA0; 
