--- a/src/app/main/components/home/home.component.scss
+++ b/src/app/main/components/home/home.component.scss
@@ -4,11 +4,10 @@ $blue: #007EA7;
 $dark: #121218;
 $lightdark: #1C1C24;
 .container {
-    width: 1160px;
+    width: 1200px;
     border-radius: 5px;
     padding: 20px 30px;
     margin: 100px auto 0 auto;
-    background: $lightdark;
 }
 .head {
     display: flex; 
@@ -43,6 +42,9 @@ td {
     text-align: center;
     cursor: pointer;
     color: $light;
+}
+.tr {
+    background: $lightdark;
 }
 .tr:hover {
     background-color: $grey;
