--- a/src/app/main/components/teams/teams.component.scss
+++ b/src/app/main/components/teams/teams.component.scss
@@ -8,7 +8,6 @@ $lightdark: #1C1C24;
     border-radius: 5px;
     padding: 20px 30px;
     margin: 100px auto 0 auto;
-    background: $lightdark;
 }
 .head {
     display: flex; 
@@ -43,6 +42,9 @@ td {
     text-align: center;
     cursor: pointer;
     color: $light;
+}
+.tr {
+    background: $lightdark;
 }
 .tr:hover {
     background-color: $grey;
